--- a/zhenjoy-latest.plist
+++ b/zhenjoy-latest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://www.zhenjoy.com/deploy/zhenjoy-latest.ipa</string>
+					<string>http://www.zhenjoy.com/deploy/zhenjoy-1.3.6.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
